crates/alloy-provider/tests/trybuild/no_signing_provider.stderr
error[E0277]: the trait bound `RpcAlloyProvider: AsyncSigningProvider` is not satisfied
 --> tests/trybuild/no_signing_provider.rs:6:19
  |
6 |     assert_impl::<RpcAlloyProvider>();
  |                   ^^^^^^^^^^^^^^^^ the trait `Provider` is not implemented for `RpcAlloyProvider`
  |
  = note: required for `RpcAlloyProvider` to implement `AsyncSigningProvider`
note: required by a bound in `assert_impl`
 --> tests/trybuild/no_signing_provider.rs:5:23
  |
5 |     fn assert_impl<T: AsyncSigningProvider>() {}
  |                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl`
